# sisteme-inteligente

./: .gitignore  README.md  main.py  pyproject.toml  stability_test.py  test_new_cpus.py  update_notebook.py
data/: CPU_merged_data.csv
prezentare/: Predictia Preturilor pentru Procesoare.pptx
src/: main.py  notebook copy.ipynb  notebook.ipynb  optimized_model.py
