[project]
name = "sisteme-inteligente"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplot>=0.1.9",
    "panda>=0.3.1",
    "pandas>=3.0.1",
    "python-markdown>=0.1.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
