[project]
name = "sisteme-inteligente"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lightgbm>=4.6.0",
    "matplot>=0.1.9",
    "nbconvert>=7.17.1",
    "panda>=0.3.1",
    "pandas>=3.0.1",
    "python-markdown>=0.1.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
